Revert "HSEARCH-3420 Add --add-modules=java.se for WildFly tools with JDK11"
This reverts commit 60077f128aaeb7a18a855f814c3b20c03fec1ff5.