@@ -1782,7 +1782,6 @@
                 </surefire.jvm.args.java-version.strict>
                 <arquillian.wildfly.jvm.args.java-version>
                     -Djdk.attach.allowAttachSelf=true
-                    --add-modules=java.se
                 </arquillian.wildfly.jvm.args.java-version>
             </properties>
             <modules>
